fix(styles): fixing extra space at the button when multiple elements are nested
affects: ak-field-base

--- a/packages/ak-field-base/src/styles/Content.less
+++ b/packages/ak-field-base/src/styles/Content.less
@@ -40,6 +40,7 @@
 
 .content {
   .borders-and-padding(@base-border-width, @base-horizontal-padding, @base-height);
+  display: flex;
   flex: 1 0 auto;
   box-sizing: border-box;
 
